tests/unit-fail/zero-pointer.ref
Error: USP-CERL7
Description: Comparison of unspecified value.
Type: Unspecified value or behavior.
See also: C11 sec. 6.5.9
  at main(zero-pointer.c:29)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
